# advanced-python

./: README.md  pyproject.toml
Chapter 06/02 - An example of a threaded application/: synchronous.py
Chapter 06/03 - Using one thread per item/: one_thread_per_item.py
Chapter 06/04 - Using a thread pool/: thread_pool.py
Chapter 06/05 - Using two-way queues/: two_way_queues.py
Chapter 06/06 - Dealing with errors in threads/: error_handling.py
Chapter 06/07 - Throttling/: throttling.py
Chapter 06/08 - Multiprocessing/: forks.py
Chapter 06/09 - The built-in multiprocessing module/: basic_multiprocessing.py  pipes.py  sharedctypes.py
Chapter 06/12 - Python async and await keywords/: async_print.py  waiters_await.py
Chapter 06/13 - A practical example of asynchronous programming/: async_aiohttp.py
Chapter 06/14 - Integrating non-asynchronous code with async using futures/: async_futures.py
Chapter 08/05 - Falcons compiled router/: sample.py
Chapter 09/01 - Writing extensions/: fibonacci.py
Chapter 09/04 - Cython as a source-to-source compiler/: setup.py
Chapter 09/05 - Cython as a language/: fibonacci.pyx  setup.py
Chapter 09/06 - Calling C functions using ctypes/: cffi.py  qsort.py
Chapter 10/05 - Mocks and unittest.mock module/: mailer.py
Chapter 10/06 - Test coverage/: README
ch02/01 - Writing your first Dockerfile/: echo.py
ch02/01-Writing your first Dockerfile/: Dockerfile  echo_flask.py
ch02/02 - Setting up complex environments/: docker-compose.yml
ch02/02-Setting up complex environments/: docker-compose.yml
(+19 files in other folders)
